# solar-clock-pico

./: .gitignore  CMakeLists.txt  flash.jlink  flash.sh  lwipopts.h  platformio.ini
mock/: server.py
src/: main.c  main.cpp  stepper.cpp  stepper.h  working_stepper.cpp
